Physics cache names allow (back)slashes, which breaks its handling. #48487

Closed
opened 2016-05-21 18:43:10 +02:00 by Cenek Strichel · 7 comments

System Information
W10 64b

Blender Version
2.77a

Short description of error
If you use subdirectory for cache, blender can not read this cache

Exact steps for others to reproduce the error

  1. open untitled.blend
  2. cache particles
  3. particles are cached and subdirectory created, but can not read
**System Information** W10 64b **Blender Version** 2.77a **Short description of error** If you use subdirectory for cache, blender can not read this cache **Exact steps for others to reproduce the error** 1) open [untitled.blend](https://archive.blender.org/developer/F314079/untitled.blend) 2) cache particles 3) particles are cached and subdirectory created, but can not read
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda

Added subscriber: @mont29

Added subscriber: @mont29

The current cache system is absolutely not designed to support sub-directories, this is a cache name, not a cache path. Will change code to forbid slash/backslash here.

The current cache system is absolutely not designed to support sub-directories, this is a **cache name**, not a **cache path**. Will change code to forbid slash/backslash here.
Bastien Montagne changed title from Cache can not be loaded to Physics cache names allow (back)slashes, which breaks its handling. 2016-05-23 17:07:00 +02:00
Bastien Montagne self-assigned this 2016-05-23 17:07:00 +02:00

Also, if you want to use a custom file path, please use the 'external' option.

Also, if you want to use a custom file path, please use the 'external' option.

This issue was referenced by af4a04eae0

This issue was referenced by af4a04eae07184f7437a8c51858a4ddb8a2e3e4c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48487
No description provided.